<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="6dp"
            android:textSize="18sp"
            android:textStyle="bold"

            />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_margin="6dp"
            android:hint="@string/hint_mail"/>

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
            app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
            android:layout_margin="6dp"
            android:hint="@string/hint_password"/>

        <Button
            android:id="@+id/button_sing_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sing_up_action"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
            android:layout_margin="6dp"/>

        <Button
            android:id="@+id/button_forget_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            app:layout_constraintEnd_toEndOf="@+id/button_sing_in"
            app:layout_constraintStart_toStartOf="@+id/button_sing_in"
            app:layout_constraintTop_toBottomOf="@+id/button_sing_in"
            android:layout_margin="6dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/textView_forget_email_fpr_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_forget_password_mailIs_empty"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
            app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:textColor="@color/red_error"
            />


</androidx.constraintlayout.widget.ConstraintLayout>